swen430as1/tests/invalid/trycatch/TryCatch_Invalid_02.while
void f(int x) {
    try {
        int x = 1;
    } catch(int z) {

    }
}